# nails

old/: controller.cc  controller.h  gen.cc  gen.h
oldold/: controller-helper.h  controller.cc.bak  controller1.cc  gen.cc.bak  test.cc  test.py  test2.cc  test2.cc.bak  test2.py
uwsgi/: uwsgiconfig.py
uwsgi/buildconf/: base.ini
uwsgi/plugins/cplusplus/: base.cc  plugin.c
uwsgi/plugins/j/: base.c  controller-extern.h  controller-helper.h  controller.cc  uwsgiplugin.py
uwsgi/plugins/j/new/: FooController.cc  gen.cc  (+13 more)
uwsgi/plugins/nails/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  TODO.txt  build-main.sh  build.ninja  build.sh  buildstatic.sh  cmake_install.cmake  gen.py  rules.ninja  stest2.cc  test.cc  uwsgiplugin.py  uwsgiplugin.py.bak
uwsgi/plugins/nails-mid/: Makefile  TODO  buildstatic.sh  chartest.cc  notes  routermain.cc  uwsgiplugin.py
uwsgi/plugins/nails-old/: ExampleRouteSingleController.hpp  Test3Controller.hpp  TestController.cc  TestController.h  base.c  build.sh  build.sh.bak  common.cc  controller-helper.cc  controller-helper.h  gen.cc  gen.cc.bak  gen.cc.bak.new  gen.cc.newbak  gen.h  gen.h.bak.new  gen2.cc  nails_route_annotations.cc  plugin.c  printer.py  reqres-common.h  test.cc  test.hpp  uwsgiplugin.py
uwsgi/plugins/nails/app/controllers/: ExampleRouteSingleController.hpp  FooController.cc  FooController.h  NewController.hpp  Test2Controller.h  TestController.h
uwsgi/plugins/nails/config/: config.h  initializers.cc  initializers.h
uwsgi/plugins/nails/config/initializers/: cors.hpp  csrf.hpp  method_override.hpp  servername.hpp  sessions.hpp
uwsgi/plugins/nails/include/: common.h  controller-helper.h  filters.h  http.h  nails.h  reqres.h  router.h  signverify.h  template.h  uwsgi-includer.h
uwsgi/plugins/nails/src/: base.cc  common.cc  controller-helper.cc  filters.cc  http.cc  nails_route_annotations.cc  plugin.c  reqres.cc  router.cc  signverify.cc  template.cc
uwsgi/plugins/nails/src/dead/: Request.cc
uwsgi/plugins/nails/test/: dispo.cc  json  real.cc  sign.cc  startswith  startswith.cc
uwsgi/plugins/nails/tools/nails-preroute/: CMakeLists.txt  format_string.h  nails-preroute.cc  nails-preroute.cc.bak
uwsgi/tests/: find.cc  foobar.py  g.c
(+42 files in other folders)
